// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecuritySection component should not render collection edit form for an Admin 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <Field
      component={[Function]}
      label="Use this interface as a..."
      name="securitySection.accessLevel"
      required={true}
      validation={
        Array [
          [Function],
        ]
      }
    >
      <WithStyles(MenuItem)
        value="Superadmin"
      >
        Super admin
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        value="Admin"
      >
        Admin
      </WithStyles(MenuItem)>
    </Field>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <WithStyles(Alert)
      message="This section is to be handled by admins only - changes made to these sections may inadvertantly hide or show records in error - please make sure you know what you're doing."
      title="Warning"
      type="warning"
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SecuritySection component should not render community edit form for an Admin 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <Field
      component={[Function]}
      label="Use this interface as a..."
      name="securitySection.accessLevel"
      required={true}
      validation={
        Array [
          [Function],
        ]
      }
    >
      <WithStyles(MenuItem)
        value="Superadmin"
      >
        Super admin
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        value="Admin"
      >
        Admin
      </WithStyles(MenuItem)>
    </Field>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <WithStyles(Alert)
      message="This section is to be handled by admins only - changes made to these sections may inadvertantly hide or show records in error - please make sure you know what you're doing."
      title="Warning"
      type="warning"
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SecuritySection component should render properly for a Superadmin 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <Field
      component={[Function]}
      label="Use this interface as a..."
      name="securitySection.accessLevel"
      required={true}
      validation={
        Array [
          [Function],
        ]
      }
    >
      <WithStyles(MenuItem)
        value="Superadmin"
      >
        Super admin
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        value="Admin"
      >
        Admin
      </WithStyles(MenuItem)>
    </Field>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <WithStyles(Alert)
      message="This section is to be handled by admins only - changes made to these sections may inadvertantly hide or show records in error - please make sure you know what you're doing."
      title="Warning"
      type="warning"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <Memo(SecurityCard)
      isPolicyInherited={true}
      recordType="collection"
      text={
        Object {
          "dataStreamFieldLabel": <span>
            Collection policy to apply to the 
            <b>
              datastream
            </b>
             of this PID
          </span>,
          "dataStreamSelectedTitle": <span>
            Selected collection 
            <b>
              datastream
            </b>
             security policy details
          </span>,
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum.",
          "fieldLabel": "",
          "prompt": "Select a security policy to apply",
          "selectedTitle": "Selected collection record security policy details",
        }
      }
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`SecuritySection component should render record edit form for an Admin 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <Field
      component={[Function]}
      label="Use this interface as a..."
      name="securitySection.accessLevel"
      required={true}
      validation={
        Array [
          [Function],
        ]
      }
    >
      <WithStyles(MenuItem)
        value="Superadmin"
      >
        Super admin
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        value="Admin"
      >
        Admin
      </WithStyles(MenuItem)>
    </Field>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={12}
    xs={12}
  >
    <WithStyles(Alert)
      message="This section is to be handled by admins only - changes made to these sections may inadvertantly hide or show records in error - please make sure you know what you're doing."
      title="Warning"
      type="warning"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <Memo(SecurityCard)
      isPolicyInherited={true}
      recordType="record"
      text={
        Object {
          "dataStream": Object {
            "overridePolicyPrompt": "Security policy for this file to override inheritance",
            "overridePrompt": "Override datastream security policy details",
          },
          "dataStreamFieldLabel": "",
          "dataStreamSelectedTitle": "Selected record level datastream security policy details",
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id aliquam sapien. Aliquam rhoncus congue consectetur. Aenean sed sapien ipsum.",
          "fieldLabel": "",
          "prompt": "Select a security policy to apply",
          "selectedTitle": "Selected record level security policy details",
        }
      }
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
